# korolr.github.io

./: CNAME  README.md  config.toml  gatsby-config.js  gatsby-node.js  index.html  package-lock.json  package.json  tox.txt
blog/: 404.html  atom.xml  (+94 more)
hakyll/: Makefile  about.md  contact.md  index.html  korolr.cabal  make-post.sh  projects.md  site.hs
hakyll/.stack-work/install/x86_64-linux-ncurses6/lts-6.10/7.10.3/flag-cache/: HTTP-4000.3.3-3daca1009d1abc63d4703e86536c28e0  HUnit-1.3.1.1-9ae4c2f31abd33c594f24f181b5de86a  JuicyPixels-3.2.7.2-6c86ec989acb61f9209031e095814a0f  MonadCatchIO-transformers-0.3.1.3-fa667aba901578e139ff8c5e91e7fccf  SHA-1.6.4.2-d3478024f83f41e86f3c202fb3f16f19  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  aeson-0.11.2.0-1064306220d5c621fa802afc7781381d  aeson-pretty-0.7.2-d4feaeb7db5381f8a70802f4e4e18d55  asn1-encoding-0.9.4-12413253d18066f2e63e93b42e712d91  asn1-parse-0.9.4-72e5e0474352511bb93dadb4393ae715  asn1-types-0.3.2-378a7f8cfb773110d9fbe172d283a303  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-3c4b289474d55aef1ab5105f55134a86  attoparsec-enumerator-0.3.4-0a82531109c0df03a2ea8c378ecb633d  base64-bytestring-1.0.0.1-4aa13e7ac7c5b00cc0cd642708d4e148  blaze-builder-0.4.0.2-e19cc2f50668f3d4da5e982c4d0bcfe9  blaze-builder-enumerator-0.2.1.0-3a9c0f407cbb8022462c2c75324e7f06  blaze-html-0.8.1.2-34e9c8668016bf5af61a8150ba470dcb  blaze-markup-0.7.1.0-ea7bb4c275da271a295c9509d4053cf2  (+104 more)
hakyll/css/: default.css  new.css
hakyll/posts/: 2016-09-03-hello word.md
hakyll/templates/: default.html  post-list.html  post.html
(+59 files in other folders)
