name:                korolr
version:             0.1.0.0
synopsis:            My home site
homepage:            http://korolr.me/
license:             MIT
license-file:        LICENSE
author:              Alexsey Lebedev
maintainer:          cyberfunk9@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable korolr
  main-is: site.hs
  build-depends:       base >=4.6 && <4.9,
                       blaze-html,
                       hakyll,
                       resourcet
  default-language:    Haskell2010
